--- a/Génie Electrique 3as/GE_3AS_C.html
+++ b/Génie Electrique 3as/GE_3AS_C.html
@@ -81,11 +81,141 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                     </div>
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس وظيفة الذاكرة</p>                    
+                    </div>
+                </div>
                 <div class="pdf_Cour">
-                    <!--<a href="">
-                        <p></p>                   
+                    <a href="Cours/Ch1/Ch1C1.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C1.pdf">
+                        <p>وثيقة الأستاذ</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>-->
+                    </a>
+                    <a href="Cours/Ch1/Ch1C1E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس القلابات</p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Ch1C2.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C2.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C2E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>NE555 درس اشارة الساعة بالدارة المنذمجة </p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Ch1C3.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C3.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C3E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس اشارة الساعة بالبوابات المنطقية </p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Ch1C4.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C4E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس السجلات </p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Ch1C5.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C5.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C5E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس العدادات</p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Ch1C6.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C6.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C6E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس المؤجلات</p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch1/Ch1C7.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C7.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch1/Ch1C7E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                 </div>
                 <hr>
 
@@ -95,11 +225,65 @@
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                     </div>
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس المتمن</p>                    
+                    </div>
+                </div>
                 <div class="pdf_Cour">
-                    <!--<a href="">
-                        <p></p>                   
+                    <a href="Cours/Ch2/Ch2C1.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Ch2C1.pdf">
+                        <p>وثيقة الأستاذ</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                    </a>-->
+                    </a>
+                    <a href="Cours/Ch2/Ch2C1E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>GEMMA درس الجيما</p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch2/Ch2C2.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Ch2C2.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Ch2C2E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p>درس متمن متعدد الأشغولات</p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch2/Ch2C3.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Ch2C3.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2/Ch2C3E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                 </div>
                 <hr>
 
