--- a/Génie Electrique 3as/GE_3AS_C.html
+++ b/Génie Electrique 3as/GE_3AS_C.html
@@ -83,8 +83,8 @@
                 </div>
                 <div class="text_Cour">
                     <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس وظيفةالذاكرة</p>                    
+                        <p>درس وظيفةالذاكرة</p> 
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -102,9 +102,9 @@
                     </a>
                 </div>
                 <div class="text_Cour">
-                    <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس القلابات</p>                    
+                    <div> 
+                        <p>درس القلابات</p> 
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                    
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -122,9 +122,9 @@
                     </a>
                 </div>
                 <div class="text_Cour">
-                    <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>NE555 درس اشارة الساعة بالدارة المنذمجة </p>                    
+                    <div> 
+                        <p>NE555 درس اشارة الساعة بالدارة المنذمجة </p>  
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                  
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -142,9 +142,9 @@
                     </a>
                 </div>
                 <div class="text_Cour">
-                    <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس اشارة الساعة بالبوابات المنطقية </p>                    
+                    <div> 
+                        <p>درس اشارة الساعة بالبوابات المنطقية </p>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                     
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -158,9 +158,9 @@
                     </a>
                 </div>
                 <div class="text_Cour">
-                    <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس السجلات </p>                    
+                    <div> 
+                        <p>درس السجلات </p>   
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                  
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -178,9 +178,9 @@
                     </a>
                 </div>
                 <div class="text_Cour">
-                    <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس العدادات</p>                    
+                    <div> 
+                        <p>درس العدادات</p>    
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                 
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -199,8 +199,8 @@
                 </div>
                 <div class="text_Cour">
                     <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس المؤجلات</p>                    
+                        <p>درس المؤجلات</p>         
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>            
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -227,8 +227,8 @@
                 </div>
                 <div class="text_Cour">
                     <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس المتمن</p>                    
+                        <p>درس المتمن</p>          
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>           
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -246,9 +246,9 @@
                     </a>
                 </div>
                 <div class="text_Cour">
-                    <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>GEMMA درس الجيما</p>                    
+                    <div> 
+                        <p>GEMMA درس الجيما</p>    
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                 
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -267,8 +267,8 @@
                 </div>
                 <div class="text_Cour">
                     <div>
-                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
-                        <p>درس متمن متعدد الأشغولات</p>                    
+                        <p>درس متمن متعدد الأشغولات</p>     
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                
                     </div>
                 </div>
                 <div class="pdf_Cour">
@@ -281,6 +281,42 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
                     <a href="Cours/Ch2/Ch2C3E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p>درس المعقبات</p>     
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch2p2/Ch2C4.ppsx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch2p2/Ch2C4E.pdf">
+                        <p>وثيقة التلميذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                </div>
+                <div class="text_Cour">
+                    <div>
+                        <p> API درس  المبرمج الآلي الصناعي</p>     
+                        <i class="fa-sharp fa-regular fa-folder-open"></i>                
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="Cours/Ch2p2/Ch2C5.pptx">
+                        <p>ملف العرض</p>                   
+                        <i class="fa-regular fa-file-powerpoint" style="color: #e65c00;"></i>
+                    </a>
+                    <a href="Cours/Ch2p2/Ch2C5.pdf">
+                        <p>وثيقة الأستاذ</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
+                    <a href="Cours/Ch2p2/Ch2C5E.pdf">
                         <p>وثيقة التلميذ</p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                     </a>
