--- a/Licence/L3S5/IHM.html
+++ b/Licence/L3S5/IHM.html
@@ -219,6 +219,46 @@
                         <p>Project4.exe</p>                   
                     </a>
                 </div>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-sharp fa-regular fa-folder-open"></i> 
+                        <p> TP N°05</p>                    
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="IHM/TP5_QT_IHM.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Mini projet 2023-2024</p>                   
+                    </a>
+                    <a href="IHM/MiniProjet.pdf">
+                        <i class="fa-solid fa-file-arrow-down" style="color: #000000;"></i>
+                        <p>Mini Projet</p>                   
+                    </a>
+                    <a href="IHM/Rapport.pdf">
+                        <i class="fa-solid fa-file-arrow-down" style="color: #000000;"></i>     
+                        <p>Rapport</p>                
+                    </a>
+                </div>
+                <hr>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Sujets Examen et corrigé type</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="IHM/2023_corrigéExamenS1IHM.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen final 2022-2023</p>                   
+                    </a>
+                    <a href="IHM/2022_corrigé_examen_IHM.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen final 2021-2022</p>                   
+                    </a>
+                    
+                </div>
+
 
                  
             </div>
