--- a/Licence/L3S5/Comp.html
+++ b/Licence/L3S5/Comp.html
@@ -191,6 +191,14 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°3</p>                   
                     </a>
+                    <a href="Comp/Série 4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Série de TD N°4</p>                   
+                    </a>
+                    <a href="Comp/Série 5.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Série de TD N°5</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
