--- a/Licence/L3S5/Comp.html
+++ b/Licence/L3S5/Comp.html
@@ -191,7 +191,7 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°3</p>                   
                     </a>
-                    <a href="Comp/Série 4.pdf">
+                    <a href="Comp/Série.S 4.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Série de TD N°4</p>                   
                     </a>
