--- a/Mathématiques 2as/MT_2AS_SE.html
+++ b/Mathématiques 2as/MT_2AS_SE.html
@@ -75,6 +75,19 @@
             <div class="Cour">
                 <h2>Séries d'exercices</h2>
                 <hr>
+                <div class="text_Cour">
+                  <div>
+                      <p>الإحتمالات</p>
+                      <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                  </div>
+              </div>
+              <div class="pdf_Cour">
+                  <a href="Séries/Ch3S1.pdf">
+                      <p>السلسلة رقم 01-الإحتمالات</p>                   
+                      <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                  </a>
+              </div>
+              
                 <!--<div class="text_Cour">
                     <div>
                         <p></p>
