--- a/Physique 3as/PH_3AS_SE.html
+++ b/Physique 3as/PH_3AS_SE.html
@@ -126,6 +126,10 @@
                     </div>
                 </div>
                 <div class="pdf_Cour">
+                    <a href="Séries/Ch3S1.pdf">
+                        <p> RC المكثفة وثنائي القطب</p>                   
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                    </a>
                     <!--<a href="">
                         <p></p>                   
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
