--- a/Licence/L3S5/PL.html
+++ b/Licence/L3S5/PL.html
@@ -81,17 +81,51 @@
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapitre III:</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="PL/Ch3.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Ch III: Méthodes du Simplexe </p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
+                <hr>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Chapitre IV:</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="PL/Ch4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Ch IV: Dualité </p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
+                <hr>
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                         <p>Séries de TD:</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
                     <a href="PL/S1.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Série TD 1</p>                   
+                        <p>Série de TD 1</p>                   
                     </a>
                     <a href="PL/S2.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Série TD 2</p>                   
+                        <p>Série de TD 2</p>                   
                     </a>
                     <a href="PL/Sol S2.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -103,11 +137,19 @@
                     </a>
                     <a href="PL/S3.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Série TD 3</p>                   
+                        <p>Série de TD 3</p>                   
                     </a>
                     <a href="PL/Sol S3.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Solution Série TD N°3</p>                   
+                    </a>
+                    <a href="PL/S4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Série de TD 4</p>                   
+                    </a>
+                    <a href="PL/Sol S4.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Solution Série TD N°4</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -115,6 +157,35 @@
                     </a>-->
                 </div>
                 <hr>   
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Sujets Examen et corrigé type</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    <a href="PL/Examen 2023.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen PL 2022-2023</p>                   
+                    </a>
+                    <a href="PL/Sol examen 2023.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Corrigé type Examen PL 2023</p>                   
+                    </a>
+                    <a href="PL/Examen R 2023.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Examen rattrapage PL 2022-2023</p>                   
+                    </a>
+                    <a href="PL/Sol examen R 2023.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Corrigé type Examen rattrapage PL 2023</p>                   
+                    </a>
+                    <!--<a href="">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p></p>                   
+                    </a>-->
+                </div>
+                <hr>
             </div>
         </div>
     </div>
