--- a/Licence/L3S5/IHM.html
+++ b/Licence/L3S5/IHM.html
@@ -202,6 +202,8 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>TP N°05: Evaluation Heuristique d'un Système Interactif</p>                   
                     </a>
+                </div>
+                <div class="pdf_Cour1">
                     <a href="IHM/Project1.exe">
                         <i class="fa-solid fa-file-arrow-down" style="color: #000000;"></i>
                         <p>Project1.exe</p>                   
