--- a/Licence/L3S5/Envs.html
+++ b/Licence/L3S5/Envs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Systéme d'expoilation 2  L3</title>
+    <title>Economie numérique et veille stratégique L3</title>
     <link rel="stylesheet" href="../L3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -36,64 +36,42 @@
 
     <div id="html2">
         <div class="text_h2_C2">
-            <p>Systéme d'expoilation 2</p>
+            <p>Economie numérique et veille stratégique</p>
             <p>Licence 3 | Semestre 5 </p>
         </div>
         <div class="Cours_C2">
             <div class="Cour">
-                
+                <h2></h2>
+                <hr>
 
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Les cours</p>
+                        <p>Chapitre 1: Economie numérique</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Se/cours l3.pdf">
+                    <a href="Envs/cours 1 Economie numerique.pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Cours Processus</p>                   
-                    </a>
-                    <a href="Se/PRODCONS.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Producteur consommateur</p>                   
-                    </a>
-                    <a href="Se/Philos.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Problème des Philosophes</p>                   
-                    </a>
-                    <a href="Se/Les moniteurs cours.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Cours Moniteur</p>                   
-                    </a>
-                    <a href="Se/ProducteurConsommateur Moniteur.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Producteur consommateur Moniteur</p>                   
-                    </a>
-                    <a href="Se/lecteurs redacteurs moniteurs.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>lecteurs rédacteurs moniteur</p>                   
+                        <p>Economie numérique</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
                     </a>-->
                 </div>
-                <hr> 
+                <hr>  
+
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Séries de TD</p>
+                        <p>Chapitre 2: veille stratégique</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Se/TD1.pdf">
+                    <a href="Envs/Chapitre 2  Veille Strategique .pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>TD1</p>                   
-                    </a>
-                    <a href="Se/micro Interro SE2 2023.pdf">
-                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Micro interrogation 2023-2024</p>                   
+                        <p>veille stratégique</p>                   
                     </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
@@ -101,21 +79,33 @@
                     </a>-->
                 </div>
                 <hr>
+
                 <div class="text_Cour">
                     <div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
-                        <p>Sujets Examen et corrigé type</p>
+                        <p>Chapitre 3: La veille stratégique et les réseaux sociaux</p>
                     </div>
                 </div>
                 <div class="pdf_Cour">
-                    <a href="Se/examen L3 SE 2023.pdf">
+                    <a href="Envs/Chapitre 3  La veille et les reseaux sociaux (1).pdf">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Examen L3 SE 2023</p>                   
+                        <p>La veille et les réseaux sociaux</p>                   
                     </a>
-                    <a href="Se/examen L3 SE 2016.pdf">
+                    <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
-                        <p>Examen L3 SE 2016 </p>                   
-                    </a>
+                        <p></p>                   
+                    </a>-->
+                </div>
+                <hr>
+
+                <div class="text_Cour">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                        <p>Examen</p>
+                    </div>
+                </div>
+                <div class="pdf_Cour">
+                    
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
