--- a/Licence/L3S5/PL.html
+++ b/Licence/L3S5/PL.html
@@ -151,6 +151,10 @@
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p>Exercice</p>                   
                     </a>
+                    <a href="PL/Sol exercice.pdf">
+                        <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                        <p>Solution d'exercice</p>                   
+                    </a>
                     <!--<a href="">
                         <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                         <p></p>                   
