--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -89,6 +89,20 @@
             </div>
         </a>
 
+        <a href="L3S5/PS.html">
+            <div class="html2_C">
+                <div class="text_C">
+                    <h3>Probabilités et </h3>
+                    <h3>statistiques</h3>
+                    <p> Licence 3 | Semestre 5 </p>
+                    <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
+                </div>
+                <div class="image_C">
+                    <img src="../Camera/PS.jpg" alt="Image circulaire">
+                </div>
+            </div>
+        </a>
+
         <a href="L3S5/PL.html">
             <div class="html2_C">
                 <div class="text_C">
