--- a/Licence/L3S5.html
+++ b/Licence/L3S5.html
@@ -38,7 +38,7 @@
         <a href="L3S5/Comp.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2>Compilation</h2>
+                    <h3>Compilation</h3>
                     <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-key fa-shake" style="color: #ffffff;"></i>
                 </div>
@@ -51,8 +51,8 @@
         <a href="L3S5/SE2.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2>Systéme d'</h2>
-                    <h2>expoilation 2</h2>
+                    <h4>Systéme d'expoilation </h4>
+                    <h4>2</h4>
                     <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
@@ -65,7 +65,7 @@
         <a href="L3S5/GL.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2>Génie logiciel</h2>
+                    <h3>Génie logiciel</h3>
                     <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
@@ -78,8 +78,8 @@
         <a href="L3S5/IHM.html">
             <div class="html2_C">
                 <div class="text_C">
-                    <h2>Interface</h2>
-                    <h2>Homme Machine</h2>
+                    <h3>Interface Homme</h3>
+                    <h3>Machine</h3>
                     <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
@@ -121,8 +121,7 @@
             <div class="html2_C">
                 <div class="text_C">
                     <h4>Economie numérique</h4>
-                    <h4>et veille</h4>
-                    <h4>stratégique</h4>
+                    <h4>et veille stratégique</h4>
                     <p> Licence 3 | Semestre 5 </p>
                     <i class="fa-solid fa-unlock-keyhole" style="color: #fafafa;"></i>
                 </div>
