--- a/Mathématiques 2as/MT_2AS_SE.html
+++ b/Mathématiques 2as/MT_2AS_SE.html
@@ -87,7 +87,12 @@
                       <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
                   </a>
               </div>
-              
+              <div class="pdf_Cour">
+                <a href="Séries/Ch3S2.pdf">
+                    <p>السلسلة رقم 02-الإحتمالات</p>                   
+                    <i class="fa-solid fa-file-pdf fa-2xl" style="color: #ff0404;"></i>
+                </a>
+            </div>
                 <!--<div class="text_Cour">
                     <div>
                         <p></p>
